--- a/manifest.json
+++ b/manifest.json
@@ -4,9 +4,12 @@
     "description": "Base Level Extension",
     "version": "1.0",
     "action": {
-        "default_popup": "hello.html",
+        "default_popup": "popup.html",
         "default_icon": "hello_extensions.png"
     },
+    "permissions": [
+        "storage"
+    ],
     "content_scripts": [
         {
             "js": [
